tests/e2e/cases/unknown-field.err
Error: unknown-field.clawr:4:5:Field unknownField not found in type Subtype
