tests/e2e/cases/unknown-field.clawr
object Subtype {}

func makeSubtype() -> Subtype => {
    unknownField: 47
}
